--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://Aytac04176.github.io/React5",
+  "homepage": "http://Aytac04176.github.io/task-new",
   "name": "my-app",
   "version": "0.1.0",
   "private": true,
