--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://Aytac04176.github.io/React1",
+  "homepage": "https://Aytac04176.github.io/Task1",
   "name": "my-app",
   "version": "0.1.0",
   "private": true,
